Update footer and contact section

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     },
     "description": "Agency is a one page HTML theme for Bootstrap.",
     "keywords": [
-        "css",
-        "sass",
-        "html",
-        "responsive",
-        "theme",
-        "template"
+        "uclm",
+        "serglez",
+        "sergio gonzalez",
+        "informatico",
+        "development",
+        "programming"
     ],
     "homepage": "https://startbootstrap.com/template-overviews/agency",
     "bugs": {
